version/0.20/_sources/api/solver/_autosummary/settings/tabulated_size.rst.txt
:orphan:

.. _tabulated_size:

tabulated_size
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.tabulated_size.tabulated_size
    :show-inheritance:

.. rubric:: Attributes

==================================================================   =========================================

Attribute                                                                                              Summary

==================================================================   =========================================
:ref:`table_name <table_name>`                                                             'table_name' child.

:ref:`column_with_diameters <column_with_diameters>`                            'column_with_diameters' child.

:ref:`column_with_number_fractions <column_with_number_fractions>`       'column_with_number_fractions' child.

:ref:`column_with_mass_fractions <column_with_mass_fractions>`             'column_with_mass_fractions' child.

:ref:`accumulated_number_fraction <accumulated_number_fraction>`          'accumulated_number_fraction' child.

:ref:`accumulated_mass_fraction <accumulated_mass_fraction>`                'accumulated_mass_fraction' child.

==================================================================   =========================================

.. rubric:: Included in:

====================================   ==========================

Parent                                                    Summary

====================================   ==========================
:ref:`particle_size <particle_size>`       'particle_size' child.

====================================   ==========================

