version/0.22/_sources/api/solver/_autosummary/settings/tabulated_size.rst.txt
:orphan:

.. _tabulated_size:

tabulated_size
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.tabulated_size.tabulated_size
    :show-inheritance:

.. rubric:: Attributes

==================================================================   ===================================================

Attribute                                                                                                        Summary

==================================================================   ===================================================
:ref:`table_name <table_name>`                                                                  Specify the table name:.

:ref:`column_with_diameters <column_with_diameters>`                                      'column_with_diameters' child.

:ref:`column_with_number_fractions <column_with_number_fractions>`                 'column_with_number_fractions' child.

:ref:`column_with_mass_fractions <column_with_mass_fractions>`                       'column_with_mass_fractions' child.

:ref:`accumulated_number_fraction <accumulated_number_fraction>`                       Use accumulated number fraction?.

:ref:`accumulated_mass_fraction <accumulated_mass_fraction>`                             Use accumulated mass fraction?.

:ref:`interpolate_between_classes <interpolate_between_classes>`         Interpolate between discrete diameter classes?.

==================================================================   ===================================================

.. rubric:: Included in:

====================================   ==========================

Parent                                                    Summary

====================================   ==========================
:ref:`particle_size <particle_size>`       'particle_size' child.

====================================   ==========================

